fixed spacing & line break issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,10 @@
   color-scheme: dark;
 }
 
+.whitespace-fix {
+  white-space: pre-wrap;
+}
+
 body {
   min-height: 100vh;
   background:
